--- a/index.html
+++ b/index.html
@@ -1,307 +1,291 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Review Sentiment Analyzer · Transformers.js</title>
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Papa Parse for TSV parsing -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Client-side Sentiment Analysis (TSV + Transformers.js)</title>
 
-        body {
-            font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
-            background: #f8fafc;
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 0;
-            padding: 1.5rem;
-        }
+  <!-- Font Awesome for sentiment icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-        .card {
-            max-width: 720px;
-            width: 100%;
-            background: white;
-            border-radius: 32px;
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
-            padding: 2.5rem;
-            transition: all 0.2s;
-        }
+  <!-- Papa Parse for TSV parsing -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 
-        h1 {
-            font-size: 2.2rem;
-            font-weight: 700;
-            letter-spacing: -0.02em;
-            background: linear-gradient(145deg, #0f172a, #334155);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            margin-bottom: 0.5rem;
-        }
+  <style>
+    :root{
+      --bg:#0b1220;
+      --card:#121b2e;
+      --text:#e6edf3;
+      --muted:#a9b4c0;
+      --border:#22314e;
 
-        .subhead {
-            color: #475569;
-            margin-bottom: 2rem;
-            border-left: 4px solid #e2e8f0;
-            padding-left: 1rem;
-            font-weight: 400;
-            font-size: 1rem;
-        }
+      --pos:#16a34a;
+      --neg:#dc2626;
+      --neu:#6b7280;
 
-        .status-bar {
-            background: #f1f5f9;
-            border-radius: 60px;
-            padding: 0.75rem 1.5rem;
-            font-size: 0.95rem;
-            color: #1e293b;
-            display: flex;
-            align-items: center;
-            gap: 0.75rem;
-            margin-bottom: 2rem;
-            border: 1px solid #e2e8f0;
-            backdrop-filter: blur(4px);
-        }
+      --warn:#f59e0b;
+      --err:#ef4444;
+    }
 
-        .status-icon {
-            width: 24px;
-            height: 24px;
-            border-radius: 999px;
-            background: #94a3b8;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 0.8rem;
-        }
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      padding:24px;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+      background:linear-gradient(180deg, #070b14, var(--bg));
+      color:var(--text);
+    }
 
-        .status-icon.ready {
-            background: #22c55e;
-        }
+    .container{
+      max-width: 980px;
+      margin: 0 auto;
+    }
 
-        .status-icon.error {
-            background: #ef4444;
-        }
+    header{
+      display:flex;
+      flex-direction:column;
+      gap:8px;
+      margin-bottom:16px;
+    }
 
-        .status-icon.loading {
-            background: #eab308;
-            animation: pulse 1.5s infinite;
-        }
+    h1{
+      font-size: 22px;
+      margin:0;
+      letter-spacing:0.2px;
+    }
 
-        @keyframes pulse {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.6; }
-        }
+    .sub{
+      color:var(--muted);
+      margin:0;
+      line-height:1.4;
+      font-size:14px;
+    }
 
-        .review-container {
-            background: #f1f4f9;
-            border-radius: 24px;
-            padding: 1.5rem;
-            margin: 2rem 0 1.8rem;
-            border: 1px solid #d1d9e6;
-            box-shadow: inset 0 2px 4px rgba(0,0,0,0.02);
-        }
+    .row{
+      display:grid;
+      grid-template-columns: 1fr;
+      gap:16px;
+    }
 
-        .review-label {
-            text-transform: uppercase;
-            font-size: 0.75rem;
-            letter-spacing: 1px;
-            font-weight: 600;
-            color: #64748b;
-            margin-bottom: 0.6rem;
-        }
+    .card{
+      background: rgba(18, 27, 46, 0.92);
+      border:1px solid var(--border);
+      border-radius:14px;
+      padding:16px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.25);
+    }
 
-        .review-text {
-            font-size: 1.3rem;
-            line-height: 1.6;
-            color: #0b1120;
-            font-weight: 450;
-            word-wrap: break-word;
-            white-space: pre-wrap;
-        }
+    .controls{
+      display:flex;
+      flex-wrap:wrap;
+      align-items:center;
+      justify-content:space-between;
+      gap:12px;
+    }
 
-        .review-text::before {
-            content: "“";
-            font-size: 2rem;
-            color: #94a3b8;
-            margin-right: 4px;
-        }
-        .review-text::after {
-            content: "”";
-            font-size: 2rem;
-            color: #94a3b8;
-            margin-left: 4px;
-            vertical-align: top;
-        }
+    button{
+      appearance:none;
+      border:1px solid var(--border);
+      background:#0f1a33;
+      color:var(--text);
+      padding:10px 14px;
+      border-radius:10px;
+      cursor:pointer;
+      font-weight:600;
+      display:inline-flex;
+      align-items:center;
+      gap:10px;
+      transition: transform 0.05s ease, background 0.2s ease;
+      user-select:none;
+    }
 
-        .result-area {
-            display: flex;
-            align-items: center;
-            gap: 1.5rem;
-            background: white;
-            border-radius: 60px;
-            padding: 0.9rem 2rem;
-            margin: 1.5rem 0 2rem;
-            border: 2px solid #e2e8f0;
-            transition: border 0.2s, box-shadow 0.2s;
-        }
+    button:hover{ background:#122045; }
+    button:active{ transform: translateY(1px); }
+    button:disabled{
+      cursor:not-allowed;
+      opacity:0.6;
+    }
 
-        .result-icon {
-            font-size: 2.5rem;
-            min-width: 60px;
-            text-align: center;
-        }
+    .spinner{
+      width:14px;
+      height:14px;
+      border:2px solid rgba(255,255,255,0.25);
+      border-top-color: rgba(255,255,255,0.9);
+      border-radius:50%;
+      animation: spin 0.8s linear infinite;
+    }
+    @keyframes spin { to { transform: rotate(360deg); } }
 
-        .result-details {
-            flex: 1;
-        }
+    .status{
+      display:flex;
+      align-items:center;
+      gap:10px;
+      color:var(--muted);
+      font-size:14px;
+      min-height: 22px;
+    }
 
-        .sentiment-label {
-            font-size: 1.5rem;
-            font-weight: 700;
-            line-height: 1.2;
-        }
+    .status .dot{
+      width:10px;height:10px;border-radius:999px;
+      background: var(--warn);
+      box-shadow: 0 0 0 4px rgba(245, 158, 11, 0.15);
+      flex:0 0 auto;
+    }
+    .status.ready .dot{
+      background: var(--pos);
+      box-shadow: 0 0 0 4px rgba(22, 163, 74, 0.15);
+    }
+    .status.error .dot{
+      background: var(--err);
+      box-shadow: 0 0 0 4px rgba(239, 68, 68, 0.15);
+    }
 
-        .confidence {
-            font-size: 1rem;
-            color: #334155;
-            opacity: 0.8;
-        }
+    .reviewBox{
+      min-height: 120px;
+      padding: 14px;
+      border-radius: 12px;
+      border: 1px dashed rgba(255,255,255,0.16);
+      background: rgba(0,0,0,0.18);
+      color: var(--text);
+      line-height: 1.5;
+      white-space: pre-wrap;
+    }
 
-        .positive {
-            color: #16a34a;
-            border-color: #86efac;
-        }
-        .negative {
-            color: #dc2626;
-            border-color: #fca5a5;
-        }
-        .neutral {
-            color: #6b7280;
-            border-color: #cbd5e1;
-        }
+    .reviewHint{
+      margin:0 0 10px 0;
+      color: var(--muted);
+      font-size: 13px;
+    }
 
-        .btn {
-            background: #0f172a;
-            color: white;
-            border: none;
-            padding: 1rem 2.5rem;
-            font-size: 1.2rem;
-            font-weight: 600;
-            border-radius: 60px;
-            cursor: pointer;
-            width: 100%;
-            transition: background 0.2s, transform 0.1s, box-shadow 0.2s;
-            box-shadow: 0 8px 16px -4px rgba(15, 23, 42, 0.2);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.75rem;
-        }
+    .result{
+      display:flex;
+      align-items:center;
+      gap:14px;
+      border:1px solid var(--border);
+      border-radius:12px;
+      padding:14px;
+      background: rgba(0,0,0,0.12);
+    }
 
-        .btn:hover:not(:disabled) {
-            background: #1e293b;
-            transform: scale(1.01);
-            box-shadow: 0 12px 20px -8px #0f172a66;
-        }
+    .resultIcon{
+      font-size: 24px;
+      width: 34px;
+      text-align:center;
+      flex:0 0 auto;
+    }
 
-        .btn:disabled {
-            background: #94a3b8;
-            cursor: not-allowed;
-            opacity: 0.7;
-            box-shadow: none;
-        }
+    .resultText{
+      display:flex;
+      flex-direction:column;
+      gap:2px;
+    }
 
-        .error-message {
-            margin-top: 1.8rem;
-            background: #fee2e2;
-            border-left: 6px solid #ef4444;
-            padding: 1rem 1.5rem;
-            border-radius: 20px;
-            color: #7f1d1d;
-            font-weight: 500;
-            font-size: 0.95rem;
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-        }
+    .labelLine{
+      font-weight: 800;
+      letter-spacing: 0.3px;
+      display:flex;
+      align-items:baseline;
+      gap:8px;
+    }
 
-        .error-message i {
-            font-size: 1.4rem;
-        }
+    .confidence{
+      font-weight:600;
+      color: var(--muted);
+      font-size: 13px;
+    }
 
-        .hidden {
-            display: none;
-        }
+    .result.positive{ border-color: rgba(22,163,74,0.55); }
+    .result.negative{ border-color: rgba(220,38,38,0.55); }
+    .result.neutral { border-color: rgba(107,114,128,0.55); }
 
-        .footer-note {
-            margin-top: 2.2rem;
-            font-size: 0.8rem;
-            text-align: center;
-            color: #94a3b8;
-        }
+    .error{
+      display:none;
+      margin-top:12px;
+      padding:12px 14px;
+      border-radius:12px;
+      border:1px solid rgba(239,68,68,0.5);
+      background: rgba(239,68,68,0.08);
+      color: #fecaca;
+      line-height: 1.4;
+      font-size: 14px;
+    }
+    .error.show{ display:block; }
 
-        .loading-spinner {
-            display: inline-block;
-            width: 18px;
-            height: 18px;
-            border: 3px solid #ffffff80;
-            border-radius: 50%;
-            border-top-color: white;
-            animation: spin 0.8s linear infinite;
-        }
+    .metaLinks{
+      display:flex;
+      gap:12px;
+      flex-wrap:wrap;
+      align-items:center;
+      margin-top: 6px;
+      font-size: 13px;
+    }
+    .metaLinks a{
+      color: #93c5fd;
+      text-decoration: none;
+      border-bottom: 1px dotted rgba(147,197,253,0.45);
+    }
+    .metaLinks a:hover{ border-bottom-style: solid; }
 
-        @keyframes spin { to { transform: rotate(360deg); } }
-    </style>
+    @media (min-width: 920px){
+      .row{
+        grid-template-columns: 1.35fr 0.65fr;
+        align-items:start;
+      }
+    }
+  </style>
 </head>
 <body>
+  <div class="container">
+    <header>
+      <h1>Client-side Sentiment Analysis</h1>
+      <p class="sub">
+        Loads <code>reviews_test.tsv</code> locally, picks a random review, and runs sentiment classification fully in your browser using Transformers.js.
+      </p>
+      <div class="metaLinks">
+        <a id="sheetLink" href="#" target="_blank" rel="noreferrer">Open logs spreadsheet</a>
+      </div>
+    </header>
+
     <div class="card">
-        <h1>🍣 sentiment·tsv</h1>
-        <div class="subhead">random review · local transformer · 100% client‑side</div>
-
-        <!-- model / data status line -->
-        <div class="status-bar" id="statusBar">
-            <span class="status-icon" id="statusIcon">⏳</span>
-            <span id="statusMessage">initializing...</span>
-        </div>
-
-        <!-- review display -->
-        <div class="review-container">
-            <div class="review-label"><i class="fa-regular fa-note-sticky" style="margin-right: 6px;"></i>selected review</div>
-            <div class="review-text" id="reviewDisplay">—</div>
-        </div>
-
-        <!-- result area with icon + sentiment/confidence -->
-        <div class="result-area" id="resultArea">
-            <div class="result-icon" id="resultIcon"><i class="fa-regular fa-circle-question"></i></div>
-            <div class="result-details">
-                <div class="sentiment-label" id="sentimentLabel">waiting</div>
-                <div class="confidence" id="confidenceText">—</div>
-            </div>
-        </div>
-
-        <!-- main action button -->
-        <button class="btn" id="analyzeBtn" disabled>
-            <i class="fa-solid fa-shuffle"></i> analyze random review
+      <div class="controls">
+        <button id="analyzeBtn" disabled>
+          <i class="fa-solid fa-shuffle"></i>
+          Analyze random review
         </button>
 
-        <!-- error display area (hidden by default) -->
-        <div id="errorBox" class="error-message hidden">
-            <i class="fa-solid fa-circle-exclamation"></i>
-            <span id="errorText">error placeholder</span>
+        <div id="status" class="status" aria-live="polite">
+          <span class="dot" aria-hidden="true"></span>
+          <span id="statusText">Initializing…</span>
         </div>
+      </div>
 
-        <div class="footer-note">
-            <i class="fa-regular fa-hard-drive"></i> model: distilbert-sst2 ·  <i class="fa-regular fa-file-lines"></i> reviews_test.tsv
-        </div>
+      <div id="errorBox" class="error" role="alert"></div>
     </div>
 
-    <script type="module" src="app.js"></script>
+    <div class="row" style="margin-top:16px;">
+      <div class="card">
+        <p class="reviewHint">Selected review</p>
+        <div id="reviewDisplay" class="reviewBox">Click “Analyze random review” once the model and TSV are ready.</div>
+      </div>
+
+      <div class="card">
+        <p class="reviewHint">Result</p>
+        <div id="resultArea" class="result neutral">
+          <div id="resultIcon" class="resultIcon" aria-hidden="true">
+            <i class="fa-solid fa-question-circle"></i>
+          </div>
+          <div class="resultText">
+            <div class="labelLine">
+              <span id="sentimentLabel">NEUTRAL</span>
+              <span id="confidenceText" class="confidence">(—)</span>
+            </div>
+            <div class="confidence" id="resultSubtext">Waiting for analysis…</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script type="module" src="app.js"></script>
 </body>
 </html>
