--- a/index.html
+++ b/index.html
@@ -2,238 +2,95 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>Client-side Sentiment Analysis (TSV + Transformers.js)</title>
 
-  <!-- Font Awesome for sentiment icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-  <!-- Papa Parse for TSV parsing -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 
   <style>
     :root{
-      --bg:#0b1220;
-      --card:#121b2e;
-      --text:#e6edf3;
-      --muted:#a9b4c0;
-      --border:#22314e;
-
-      --pos:#16a34a;
-      --neg:#dc2626;
-      --neu:#6b7280;
-
-      --warn:#f59e0b;
-      --err:#ef4444;
+      --bg:#0b1220; --card:#121b2e; --text:#e6edf3; --muted:#a9b4c0; --border:#22314e;
+      --pos:#16a34a; --neg:#dc2626; --neu:#6b7280; --warn:#f59e0b; --err:#ef4444;
     }
-
     *{box-sizing:border-box}
     body{
-      margin:0;
-      padding:24px;
+      margin:0; padding:24px;
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-      background:linear-gradient(180deg, #070b14, var(--bg));
+      background:linear-gradient(180deg,#070b14,var(--bg));
       color:var(--text);
     }
+    .container{max-width:980px;margin:0 auto}
+    header{display:flex;flex-direction:column;gap:8px;margin-bottom:16px}
+    h1{font-size:22px;margin:0;letter-spacing:.2px}
+    .sub{color:var(--muted);margin:0;line-height:1.4;font-size:14px}
+    .metaLinks{display:flex;gap:12px;flex-wrap:wrap;align-items:center;margin-top:6px;font-size:13px}
+    .metaLinks a{color:#93c5fd;text-decoration:none;border-bottom:1px dotted rgba(147,197,253,.45)}
+    .metaLinks a:hover{border-bottom-style:solid}
 
-    .container{
-      max-width: 980px;
-      margin: 0 auto;
-    }
-
-    header{
-      display:flex;
-      flex-direction:column;
-      gap:8px;
-      margin-bottom:16px;
-    }
-
-    h1{
-      font-size: 22px;
-      margin:0;
-      letter-spacing:0.2px;
-    }
-
-    .sub{
-      color:var(--muted);
-      margin:0;
-      line-height:1.4;
-      font-size:14px;
-    }
-
-    .row{
-      display:grid;
-      grid-template-columns: 1fr;
-      gap:16px;
-    }
-
+    .row{display:grid;grid-template-columns:1fr;gap:16px}
     .card{
-      background: rgba(18, 27, 46, 0.92);
+      background:rgba(18,27,46,.92);
       border:1px solid var(--border);
       border-radius:14px;
       padding:16px;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.25);
+      box-shadow:0 12px 30px rgba(0,0,0,.25);
     }
-
-    .controls{
-      display:flex;
-      flex-wrap:wrap;
-      align-items:center;
-      justify-content:space-between;
-      gap:12px;
-    }
-
+    .controls{display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;gap:12px}
     button{
-      appearance:none;
-      border:1px solid var(--border);
-      background:#0f1a33;
-      color:var(--text);
-      padding:10px 14px;
-      border-radius:10px;
-      cursor:pointer;
-      font-weight:600;
-      display:inline-flex;
-      align-items:center;
-      gap:10px;
-      transition: transform 0.05s ease, background 0.2s ease;
+      appearance:none;border:1px solid var(--border);background:#0f1a33;color:var(--text);
+      padding:10px 14px;border-radius:10px;cursor:pointer;font-weight:600;
+      display:inline-flex;align-items:center;gap:10px;transition:transform .05s ease,background .2s ease;
       user-select:none;
     }
-
-    button:hover{ background:#122045; }
-    button:active{ transform: translateY(1px); }
-    button:disabled{
-      cursor:not-allowed;
-      opacity:0.6;
-    }
+    button:hover{background:#122045}
+    button:active{transform:translateY(1px)}
+    button:disabled{cursor:not-allowed;opacity:.6}
 
     .spinner{
-      width:14px;
-      height:14px;
-      border:2px solid rgba(255,255,255,0.25);
-      border-top-color: rgba(255,255,255,0.9);
-      border-radius:50%;
-      animation: spin 0.8s linear infinite;
+      width:14px;height:14px;border:2px solid rgba(255,255,255,.25);
+      border-top-color:rgba(255,255,255,.9);border-radius:50%;
+      animation:spin .8s linear infinite;
     }
-    @keyframes spin { to { transform: rotate(360deg); } }
+    @keyframes spin{to{transform:rotate(360deg)}}
 
-    .status{
-      display:flex;
-      align-items:center;
-      gap:10px;
-      color:var(--muted);
-      font-size:14px;
-      min-height: 22px;
-    }
+    .status{display:flex;align-items:center;gap:10px;color:var(--muted);font-size:14px;min-height:22px}
+    .status .dot{width:10px;height:10px;border-radius:999px;background:var(--warn);box-shadow:0 0 0 4px rgba(245,158,11,.15);flex:0 0 auto}
+    .status.ready .dot{background:var(--pos);box-shadow:0 0 0 4px rgba(22,163,74,.15)}
+    .status.error .dot{background:var(--err);box-shadow:0 0 0 4px rgba(239,68,68,.15)}
 
-    .status .dot{
-      width:10px;height:10px;border-radius:999px;
-      background: var(--warn);
-      box-shadow: 0 0 0 4px rgba(245, 158, 11, 0.15);
-      flex:0 0 auto;
-    }
-    .status.ready .dot{
-      background: var(--pos);
-      box-shadow: 0 0 0 4px rgba(22, 163, 74, 0.15);
-    }
-    .status.error .dot{
-      background: var(--err);
-      box-shadow: 0 0 0 4px rgba(239, 68, 68, 0.15);
-    }
-
+    .reviewHint{margin:0 0 10px 0;color:var(--muted);font-size:13px}
     .reviewBox{
-      min-height: 120px;
-      padding: 14px;
-      border-radius: 12px;
-      border: 1px dashed rgba(255,255,255,0.16);
-      background: rgba(0,0,0,0.18);
-      color: var(--text);
-      line-height: 1.5;
-      white-space: pre-wrap;
-    }
-
-    .reviewHint{
-      margin:0 0 10px 0;
-      color: var(--muted);
-      font-size: 13px;
+      min-height:120px;padding:14px;border-radius:12px;border:1px dashed rgba(255,255,255,.16);
+      background:rgba(0,0,0,.18);color:var(--text);line-height:1.5;white-space:pre-wrap
     }
 
     .result{
-      display:flex;
-      align-items:center;
-      gap:14px;
-      border:1px solid var(--border);
-      border-radius:12px;
-      padding:14px;
-      background: rgba(0,0,0,0.12);
+      display:flex;align-items:center;gap:14px;border:1px solid var(--border);border-radius:12px;
+      padding:14px;background:rgba(0,0,0,.12)
     }
+    .resultIcon{font-size:24px;width:34px;text-align:center;flex:0 0 auto}
+    .resultText{display:flex;flex-direction:column;gap:2px}
+    .labelLine{font-weight:800;letter-spacing:.3px;display:flex;align-items:baseline;gap:8px}
+    .confidence{font-weight:600;color:var(--muted);font-size:13px}
 
-    .resultIcon{
-      font-size: 24px;
-      width: 34px;
-      text-align:center;
-      flex:0 0 auto;
-    }
-
-    .resultText{
-      display:flex;
-      flex-direction:column;
-      gap:2px;
-    }
-
-    .labelLine{
-      font-weight: 800;
-      letter-spacing: 0.3px;
-      display:flex;
-      align-items:baseline;
-      gap:8px;
-    }
-
-    .confidence{
-      font-weight:600;
-      color: var(--muted);
-      font-size: 13px;
-    }
-
-    .result.positive{ border-color: rgba(22,163,74,0.55); }
-    .result.negative{ border-color: rgba(220,38,38,0.55); }
-    .result.neutral { border-color: rgba(107,114,128,0.55); }
+    .result.positive{border-color:rgba(22,163,74,.55)}
+    .result.negative{border-color:rgba(220,38,38,.55)}
+    .result.neutral{border-color:rgba(107,114,128,.55)}
 
     .error{
-      display:none;
-      margin-top:12px;
-      padding:12px 14px;
-      border-radius:12px;
-      border:1px solid rgba(239,68,68,0.5);
-      background: rgba(239,68,68,0.08);
-      color: #fecaca;
-      line-height: 1.4;
-      font-size: 14px;
+      display:none;margin-top:12px;padding:12px 14px;border-radius:12px;
+      border:1px solid rgba(239,68,68,.5);background:rgba(239,68,68,.08);
+      color:#fecaca;line-height:1.4;font-size:14px;
     }
-    .error.show{ display:block; }
+    .error.show{display:block}
 
-    .metaLinks{
-      display:flex;
-      gap:12px;
-      flex-wrap:wrap;
-      align-items:center;
-      margin-top: 6px;
-      font-size: 13px;
-    }
-    .metaLinks a{
-      color: #93c5fd;
-      text-decoration: none;
-      border-bottom: 1px dotted rgba(147,197,253,0.45);
-    }
-    .metaLinks a:hover{ border-bottom-style: solid; }
-
-    @media (min-width: 920px){
-      .row{
-        grid-template-columns: 1.35fr 0.65fr;
-        align-items:start;
-      }
+    @media (min-width:920px){
+      .row{grid-template-columns:1.35fr .65fr;align-items:start}
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <header>
@@ -253,6 +110,7 @@
           Analyze random review
         </button>
 
+        <!-- ✅ IMPORTANT: ids MUST match app.js -->
         <div id="status" class="status" aria-live="polite">
           <span class="dot" aria-hidden="true"></span>
           <span id="statusText">Initializing…</span>
@@ -265,7 +123,9 @@
     <div class="row" style="margin-top:16px;">
       <div class="card">
         <p class="reviewHint">Selected review</p>
-        <div id="reviewDisplay" class="reviewBox">Click “Analyze random review” once the model and TSV are ready.</div>
+        <div id="reviewDisplay" class="reviewBox">
+          Click “Analyze random review” once the model and TSV are ready.
+        </div>
       </div>
 
       <div class="card">
